--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "rivas-app",
+  "homepage": "https://tonetete.github.io/rivas-app",
   "version": "1.0.0",
   "description": "A simple project to display Lottoland results",
   "main": "index.js",
   "scripts": {
     "sync:build": "cd ../rivas-lib/ && rm -rf lib/ && npm run build && cd - && cp -r ../rivas-lib/lib node_modules/rivas-lib",
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.config.js",
+    "build": "rm -rf dist/ && cross-env NODE_ENV=production webpack --config config/webpack.prod.config.js",
+    "deploy": "rm -rf dist/ && npm run build && gh-pages -d dist",
     "test": "jest --silent --coverage=false --detectOpenHandles",
     "test:verbose": "jest --coverage=false --detectOpenHandles",
     "test:coverage": "jest --silent --coverage=true --detectOpenHandles"
@@ -15,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "babel-loader": "^8.1.0",
@@ -22,10 +25,12 @@
     "copy-webpack-plugin": "^6.2.1",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.0",
     "mini-css-extract-plugin": "^1.1.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.0",
     "tslint": "^6.1.3",
@@ -40,6 +45,6 @@
     "@types/react": "^16.9.53",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "rivas-lib": "^1.1.0"
+    "rivas-lib": "^1.2.0"
   }
 }
