--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
+    "@testing-library/react": "^11.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
@@ -27,12 +28,15 @@
     "css-loader": "^5.0.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.0",
     "mini-css-extract-plugin": "^1.1.2",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.0",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.3",
