README & nodeCI changes

--- a/.github/workflows/nodeCI.yml
+++ b/.github/workflows/nodeCI.yml
@@ -10,6 +10,7 @@ jobs:
       matrix:
         node-version: [12.x]
     env:
+      DEFAULT_BRANCH: main
       CI: true
 
     steps:
@@ -39,15 +40,5 @@ jobs:
       - name: Test
         run: npm run test:coverage
 
-      - name: Build
+      - name: Deploy
         run: npm run build
-
-      # - name: Setup GIT
-      #   run: |
-      #     git config user.email ${{ secrets.EMAIL }}
-      #     git config user.name ${{ secrets.USERNAME }}
-
-      # - name: Publish
-      #   run: npm version minor && npm publish
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
