change order build script

--- a/.github/workflows/nodeCI.yml
+++ b/.github/workflows/nodeCI.yml
@@ -53,6 +53,11 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Build
+        run: |
+          npm install
+          npm run build
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
